# aerosol-workshop-driver

./: .CMakeLists.txt.swp  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  aero_config.cmake  singularity.def
.github/workflows/: test-macos.yml  test.yml
cmake/: model_config.cmake  test_util.cmake
data/: README
driver/: CMakeLists.txt  README  compute_aero_optics.F90  compute_aero_optics.c  compute_aero_optics.cpp  cpp_host.cpp  fortran_host.F90
include/: CMakeLists.txt  README  aero.F90.in  aero.h.in
include/aero/: aero.h.in  aero.hpp.in
include/aero/array/: array.h  array.hpp  c_array.hpp  cpp_array.h  fortran_array.h  fortran_array.hpp
include/aero/grid/: grid.h  grid.hpp
include/aero/interpolator/: interpolator.h  interpolator.hpp
include/aero/model/: c_model.hpp  cpp_model.h  fortran_model.h  fortran_model.hpp  model.h  model.hpp
include/aero/state/: c_state.hpp  fortran_state.hpp  state.h  state.hpp
include/grid/: ai_grid.hpp
interface/: CMakeLists.txt  aerosol.F90  aerosol.c  aerosol.cpp  aerosol.h  aerosol.hpp  aerosol_cpp.cpp  aerosol_cpp.h  ai_aerosol.F90  ai_aerosol.c  ai_aerosol.cpp  ai_aerosol.h  ai_aerosol.hpp  ai_array.cpp  ai_array.h  ai_bridge.cpp  ai_bridge.h  ai_grid.cpp  ai_state.cpp  ai_state.hpp  constants.F90  util.F90
interface/aerosol/: CMakeLists.txt  ai_aerosol.F90  ai_aerosol.h  ai_aerosol.hpp  ai_bridge_aerosol.cpp  ai_bridge_aerosol.h  ai_cpp_aerosol.F90
interface/array/: CMakeLists.txt  ai_array.c  ai_array.cpp  ai_array.hpp
interface/grid/: CMakeLists.txt  ai_grid.c  ai_grid.h
interface/state/: ai_bridge_state.cpp  ai_state.c  ai_state.cpp  ai_state.h
my_model/: CMakeLists.txt  README  cmaq_aero_optics.F90  model_factory.F90.in  model_factory.cpp.in  model_factory.h  model_factory.hpp  my_model.F90
my_model/template/: CMakeLists.txt
my_model/template/c/: CMakeLists.txt  create_model.c.in  create_model.h  model_factory.F90  model_factory.F90.in  model_factory.c  model_factory.cpp  model_factory.cpp.in  model_factory.h  model_factory.hpp  my_model.c  my_model.h  my_model_data.nc
my_model/template/cpp/: CMakeLists.txt  create_model.cpp.in  create_model.hpp  model_factory.F90  model_factory.cpp  model_factory.cpp.in  my_aerosol.cpp  my_aerosol.hpp  my_model.cpp  my_model.hpp
my_model/template/fortran/: CMakeLists.txt  model_factory.F90  model_factory.c  model_factory.cpp  model_factory.h  model_factory.hpp  my_model.F90
output/: README
src/: CMakeLists.txt  aero_constants.F90.in  aero_util.F90  aero_util.c
src/aerosol/: ai_aerosol.c  ai_aerosol.cpp  ai_c_aerosol.F90
src/array/: CMakeLists.txt  ai_bridge_array.cpp  ai_bridge_array.h  array.F90  array.c  array.cpp  array_bridge.F90  array_bridge.cpp  array_bridge.h  c_array.F90  c_array.cpp  cpp_array.F90  cpp_array.c  fortran_array.c  fortran_array.cpp  wrap_array.h
src/grid/: CMakeLists.txt  ai_bridge_grid.cpp  ai_bridge_grid.h  ai_grid.cpp  grid.F90  grid.c  grid.cpp  grid_bridge.F90  grid_bridge.cpp  grid_bridge.h
src/interpolator/: CMakeLists.txt  interpolator.F90  interpolator.c  interpolator.cpp
src/model/: CMakeLists.txt  c_model.F90  c_model.cpp  cpp_model.F90  cpp_model.c  fortran_model.c  fortran_model.cpp  model.F90  model.c  model.cpp  model_bridge.F90  model_bridge.cpp  model_bridge.h  wrap_model.h
src/state/: CMakeLists.txt  ai_bridge_state.h  c_state.cpp  fortran_state.cpp  state.F90  state.c  state.cpp  state_bridge.F90  state_bridge.cpp  state_bridge.h
template/: CMakeLists.txt
template/c/: CMakeLists.txt  aerosol_factory.F90  my_aerosol.c  my_aerosol.h
template/cpp/: CMakeLists.txt  aerosol_factory.F90  my_aerosol.hpp
template/fortran/: CMakeLists.txt  aerosol_factory.F90  my_aerosol.F90
test/array/: CMakeLists.txt  array.F90  array.c  array.cpp  array_c.F90  array_fortran.c  array_fortran.cpp  array_fortran.h
tests/: CMakeLists.txt
tests/array/: CMakeLists.txt  array.F90  array.c  array.cpp  array_helper.F90  array_helper.c  array_helper.cpp  array_helper.h
tests/grid/: CMakeLists.txt  grid.F90  grid.c  grid.cpp  grid_helper.F90  grid_helper.cpp  grid_helper.h
tests/interpolator/: CMakeLists.txt  interpolator.F90  interpolator.c  interpolator.cpp
tests/template/: CMakeLists.txt  my_model.F90  my_model.c  my_model.cpp  my_model_helper.F90  my_model_helper.c  my_model_helper.cpp  my_model_helper.h
