################################################################################
# Aerosol interface source
add_library(ai ai_aerosol.c
               ai_aerosol.cpp
               ai_aerosol.F90
               ai_c_aerosol.F90
               ai_cpp_aerosol.F90
               ai_array.c
               ai_array.cpp
               ai_bridge.cpp
               ai_constants.F90
               ai_state.c
               ai_state.cpp
               ai_grid.c
               ai_grid.cpp
               ai_util.F90)

################################################################################
