################################################################################
# Tests for the aerosol interface

add_subdirectory(array)
add_subdirectory(interpolator)
add_subdirectory(grid)
add_subdirectory(template)

################################################################################
